Libs, tests and README updates  - gulp migration  - bower to npm migration  - phantomJS to chromeHeadless migration  - 1 test migration

--- a/src/main/static/assets/style/_page_project_details_documentation.sass
+++ b/src/main/static/assets/style/_page_project_details_documentation.sass
@@ -1,12 +1,12 @@
 @import "variables"
-@import "../../bower_components/foundation/scss/foundation"
+@import "../../node_modules/foundation-sites/scss/foundation"
 
 $tomitribe-p-size: $tribe-font-size
 
 table
   // foundation table styles
-  @extend .table-striped
-  @extend .table-bordered
+  //@extend .table-striped
+  //@extend .table-bordered
   width: 100%
 
 img
