Copyright character and date fix

--- a/src/main/static/assets/footer_legal.jade
+++ b/src/main/static/assets/footer_legal.jade
@@ -1,6 +1,6 @@
 div.tribe-footer-legal
     p.
-        Copyright © 2016 #[a(href="http://www.tomitribe.com/") Tomitribe].  All Rights Reserved.
+        Copyright &copy; 2019 #[a(href="http://www.tomitribe.com/") Tomitribe].  All Rights Reserved.
         #[a(href="http://www.tomitribe.com/legal/community-terms-of-use/") Community Terms of Service],
         #[a(href="http://www.tomitribe.com/legal/website-terms-of-service/") Terms of Service] and
         #[a(href="http://www.tomitribe.com/legal/privacy-policy/") Privacy Policy].
