fix: sass and html cleanup

--- a/generation/assets/style/_header_contributors.sass
+++ b/generation/assets/style/_header_contributors.sass
@@ -28,7 +28,7 @@
       margin-bottom: 50px
   > div.tribe-contributors-title
     $title-h1-font-size: 40px
-    $title-h4-font-size: $title-h1-font-size / 2
+    $title-h4-font-size: calc($title-h1-font-size / 2)
     display: flex
     flex-direction: column
     align-items: center
