--- a/generation/assets/style/_header_projects.sass
+++ b/generation/assets/style/_header_projects.sass
@@ -35,7 +35,7 @@
     align-items: center
     display: flex
     $title-h1-font-size: 40px
-    $title-h4-font-size: $title-h1-font-size / 2
+    $title-h4-font-size: calc($title-h1-font-size / 2)
     > div
       width: 100px
       border-bottom: solid $tomitribe-orange 1px
