--- a/generation/assets/style/_page_project_details_documentation.sass
+++ b/generation/assets/style/_page_project_details_documentation.sass
@@ -1,5 +1,6 @@
 @import "variables"
-@import "../../node_modules/foundation-sites/scss/foundation"
+
+@import "node_modules/foundation-sites/scss/foundation"
 
 $tomitribe-p-size: $tribe-font-size
 
