--- a/generation/assets/style/_page_project_full_documentation.sass
+++ b/generation/assets/style/_page_project_full_documentation.sass
@@ -91,7 +91,7 @@ div.tribe-project-documentation
           > h1
             font-size: 16px
             font-weight: 700
-            padding: 0 0 $side-padding ($side-padding / 2)
+            padding: 0 0 $side-padding calc($side-padding / 2)
             line-height: 1
           > div
             position: relative
@@ -100,7 +100,7 @@ div.tribe-project-documentation
             flex-grow: 1
             > div
               background-color: $tomitribe-white
-              padding: $side-padding / 2
+              padding: calc($side-padding / 2)
               position: absolute
               @media (max-width: $collapse-width)
                 position: static
