--- a/generation/assets/style/_section_os_quotes.sass
+++ b/generation/assets/style/_section_os_quotes.sass
@@ -51,7 +51,7 @@ section.tribe-os-quotes
         width: $img-width
         > img
           width: $img-width
-          border-radius: ($img-width / 2)
+          border-radius: calc($img-width / 2)
       > h3
         padding: 20px 0 0 0
         color: $tomitribe-orange
