--- a/generation/assets/style/_header_main.sass
+++ b/generation/assets/style/_header_main.sass
@@ -1,7 +1,7 @@
 @import "variables"
 
 $title-h1-font-size: 42pt
-$title-h4-font-size: $title-h1-font-size / 2
+$title-h4-font-size: calc($title-h1-font-size / 2)
 > header
   height: $tribe-header-height
   @media (max-width: 700px) and (max-height: 450px)
