--- a/generation/assets/section-projects-carousel.pug
+++ b/generation/assets/section-projects-carousel.pug
@@ -10,10 +10,10 @@ section(ng-controller="ProjectsCarousselController", class="tribe-projects")
         .tribe-projects-caroussel
             div
                 article(ng-repeat="project in projects")
-                    a(href="projects/{{project.name}}")
+                    a(href="projects/{{project.name}}/")
                         div
                             img(ng-src="data:image/png;base64,{{project.icon}}")
                         h3 {{project.friendlyName ? project.friendlyName : project.name}}
                         p {{project.shortDescription}}
         div(class="icon-sprite_arrow tribe-right")
-    a(href="projects") see all projects
+    a(href="projects/") see all projects
