fix: update share buttons + improve commands

--- a/generation/assets/page-projects.pug
+++ b/generation/assets/page-projects.pug
@@ -17,9 +17,9 @@ div(ng-controller="ProjectsController", class="tribe-all-projects")
                         .tribe-project-share
                             h5 share it
                             div
-                                i(tribe-share-project="twitter")
+                                a(ng-href="{{'https://twitter.com/intent/tweet?text=Check out ' + baseURI + 'projects/' + project.name}}" target="_blank")
                                     i.fa.fa-twitter
-                                i(tribe-share-project="facebook")
+                                a(ng-href="{{'http://www.facebook.com/sharer/sharer.php?u=' + baseURI + 'projects/' + project.name}}" target="_blank")
                                     i.fa.fa-facebook
 
 
