--- a/generation/assets/style/_page_project_details.sass
+++ b/generation/assets/style/_page_project_details.sass
@@ -87,7 +87,7 @@ div.tribe-project-details
           margin-bottom: 10px
         > div
           display: flex
-          > div
+          > a
             display: flex
             justify-content: center
             padding: 10px
@@ -95,6 +95,7 @@ div.tribe-project-details
             border: solid $tomitribe-lightgray 1px
             background-color: $tomitribe-white
             margin-left: 5px
+            text-decoration: none
             &:hover
               cursor: pointer
             &:first-child
