--- a/generation/assets/style/_page_projects.sass
+++ b/generation/assets/style/_page_projects.sass
@@ -80,11 +80,12 @@ div.tribe-all-projects
                 text-transform: uppercase
                 margin-bottom: 5px
               > div
-                > i
+                > a
                   > i
                     font-size: 20px
                     color: $tomitribe-lightgray
                   margin-left: 15px
+                  text-decoration: none
                   &:first-child
                     margin-left: 0
                   &:hover
