fix(MARKETING-638): update logo
- update legal date
- upddate logo
- re-generate webapp and static files

--- a/generation/assets/footer_legal.pug
+++ b/generation/assets/footer_legal.pug
@@ -1,9 +1,9 @@
 div.tribe-footer-legal
     p.
-        Copyright &copy; 2022 #[a(href="http://www.tomitribe.com/") Tomitribe].  All Rights Reserved.
-        #[a(href="http://www.tomitribe.com/legal/community-terms-of-use/") Community Terms of Service],
-        #[a(href="http://www.tomitribe.com/legal/website-terms-of-service/") Terms of Service] and
-        #[a(href="http://www.tomitribe.com/legal/privacy-policy/") Privacy Policy].
+        Copyright &copy; 2023 #[a(href="https://www.tomitribe.com/") Tomitribe].  All Rights Reserved.
+        #[a(href="https://www.tomitribe.com/legal/community-terms-of-use/") Community Terms of Service],
+        #[a(href="https://www.tomitribe.com/legal/website-terms-of-service/") Terms of Service] and
+        #[a(href="https://www.tomitribe.com/legal/privacy-policy/") Privacy Policy].
     div(data-tribe-scroll-to-top)
         i.fa.fa-chevron-up.fa-1
         span back to top
