--- a/app/style/sprite.css
+++ b/app/style/sprite.css
@@ -17,37 +17,37 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 <i class="icon icon-home"></i>
 */
 .icon-sprite_jacek-laskowski {
-  background-image: url(../images/sprite.png);
+  background-image: url(../images/sprite.png?cache=1678985717889);
   background-position: 0px -66px;
   width: 119px;
   height: 119px;
 }
 .icon-sprite_jorg-jans {
-  background-image: url(../images/sprite.png);
+  background-image: url(../images/sprite.png?cache=1678985717889);
   background-position: -233px 0px;
   width: 119px;
   height: 119px;
 }
 .icon-sprite_luca-merolla {
-  background-image: url(../images/sprite.png);
+  background-image: url(../images/sprite.png?cache=1678985717889);
   background-position: 0px -185px;
   width: 119px;
   height: 119px;
 }
 .icon-sprite_ryan-mcginnis {
-  background-image: url(../images/sprite.png);
+  background-image: url(../images/sprite.png?cache=1678985717889);
   background-position: -119px -185px;
   width: 119px;
   height: 119px;
 }
 .icon-sprite_arrow {
-  background-image: url(../images/sprite.png);
+  background-image: url(../images/sprite.png?cache=1678985717889);
   background-position: -233px -119px;
   width: 34px;
   height: 34px;
 }
 .icon-sprite_tomi-opensource-logo {
-  background-image: url(../images/sprite.png);
+  background-image: url(../images/sprite.png?cache=1678985717889);
   background-position: 0px 0px;
   width: 233px;
   height: 66px;
